--- a/Middleware/html5_middleware(solution_developmentcomment).html
+++ b/Middleware/html5_middleware(solution_developmentcomment).html
@@ -1,8 +1,8 @@
-/* CUXML Middleware call using QtWebKit Module of Qt5
+<!-- CUXML Middleware call using QtWebKit Module of Qt5
 Middleware Access from QML (Custom CUXML Middleware) / JavaScript
 Or, Middleware Access from HTML5
 For Plain HTML5 (Middleware Access), XMLHttpRequest / Websockets / HTTP server(or wrapper) Custom Embedded Middleware
-*/
+!-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -17,7 +17,7 @@ For Plain HTML5 (Middleware Access), XMLHttpRequest / Websockets / HTTP server(o
 </body>
 </html>
 
-/* Middleware C++ Library / QwebView from Qt Function / HTML File / Middleware Object To JS Context
+<!-- Middleware C++ Library / QwebView from Qt Function / HTML File / Middleware Object To JS Context
 
 Call Q_INVOKABLEs
 
@@ -27,4 +27,4 @@ QwebView webview;
 
 webView.load(QUrl("main.html"));
 webView.page()->mainFrame()->addToJavaScriptWindowObject("middleware", &mw);
-*/
+!-->
